--- a/ZQuanProject/Info.plist
+++ b/ZQuanProject/Info.plist
@@ -47,8 +47,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>转圈想要访问您的相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>转圈想要访问您的麦克风</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>转圈想要访问您的相册</string>
+	<string>转圈想要访问您的相册添加图片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>转圈想要访问您的相册</string>
 	<key>UIBackgroundModes</key>
